integration/fixtures/k8s-session-persistence/gateway-traefikservice-route-wrr/backend-b-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-tsr-wrr-b
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-tsr-wrr-b
  template:
    metadata:
      labels:
        app: whoami-tsr-wrr-b
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
