integration/fixtures/k8s-session-persistence/gateway-traefikservice-route-wrr/httproute-header.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-tsr-wrr-header
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-tsr-wrr-header.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tsr-wrr-header
          kind: TraefikService
          group: traefik.io
          port: 80
      sessionPersistence:
        sessionName: X-Route-Sticky
        type: Header
