integration/fixtures/k8s-session-persistence/gateway-traefikservice-route-wrr/service-b-cookie.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-tsr-wrr-b-cookie
  namespace: default
spec:
  selector:
    app: whoami-tsr-wrr-b
  ports:
    - name: web
      port: 80
      targetPort: 80
